crates/core/tests/compile_fail/unknown_field_attr.rs
use sutures::Seam;

#[derive(Seam)]
struct Bad {
    #[seam(bogus)]
    field: String,
}

fn main() {}
