crates/core/tests/compile_fail/unknown_field_attr.stderr
error: unknown seam attribute
 --> tests/compile_fail/unknown_field_attr.rs:5:12
  |
5 |     #[seam(bogus)]
  |            ^^^^^
